--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Abhayaghmr11.github.io/textutils-React",
+  "homepage": "https://Abhayaghmr11.github.io/textutils",
   "name": "textutils",
   "version": "0.1.0",
   "private": true,
